# identity-verified-gesture-rec

./: .gitignore  README.md
micropython_dev/: main.py
ros_espros/cam660_apps/: .gitignore  configs_sys_rosbags.txt  offline_gesture_performance.txt  record_sys.sh  record_sys_multi.sh  rename_rosbags.py  system_commands.txt  system_launch.sh  system_launch_rosbag.sh
ros_espros/cam660_apps/devel/: .catkin
ros_espros/cam660_apps/src/metrics/: CMakeLists.txt  package.xml
ros_espros/cam660_apps/src/metrics/ground_truth/: example.yaml  ground_truth.json
ros_espros/cam660_apps/src/metrics/launch/: metrics.launch
ros_espros/cam660_apps/src/metrics/results/: multi_001.json  multi_001.txt  multi_002.json  multi_002.txt  multi_003.json  multi_003.txt  multi_004.json  multi_004.txt  multi_005.json  multi_005.txt  multi_006.json  multi_006.txt  multi_007.json  multi_007.txt  multi_008.json  multi_008.txt  multi_009.json  multi_009.txt  multi_010.json  multi_010.txt  multi_011.json  multi_011.txt  multi_012.json  multi_012.txt  multi_013.json  multi_013.txt  multi_014.json  multi_014.txt  multi_015.json  multi_015.txt  multi_016.json  multi_016.txt  multi_017.json  multi_017.txt  multi_018.json  multi_018.txt  multi_019.json  multi_019.txt  multi_020.json  multi_020.txt  (+78 more)
ros_espros/cam660_apps/src/metrics/scripts/: compute_accuracy.py  metrics_node.py  plots.ipynb  report.txt
ros_espros/cam660_driver/: README.md
ros_espros/cam660_driver/devel/: .catkin  .rosinstall  local_setup.fish  setup.fish
ros_espros/rosbags/: delay_record.sh
(+611 files in other folders)
